# blog

./: pyproject.toml
core/: db.sqlite3
core/book/: admin.py  models.py  urls.py  views.py
core/book/migrations/: 0001_initial.py
core/book/templates/: base.html  home.html  log_out.html  login.html  register.html
core/core/: settings.py  urls.py
