[tool.poetry]
name = "movie"
version = "0.1.0"
description = ""
authors = ["Aminul Chowdhury <aminul.babor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.1.1"
django = "^5.0.4"
django-extensions = "^3.2.3"
black = "^24.4.0"
django-debug-toolbar = "^4.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
